# rocketnote

./: .gitignore  APP_STORE_GUIDE.md  BUILD.md  LICENSE  PRIVACY_POLICY.md  README.md  fix-icons.sh  generate-icons.sh  index.html  package.json
src/: App.tsx  icons.ts  main.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: helpers.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: bookmarks.rs  cloud.rs  crypto.rs  filesystem.rs  git.rs  keychain.rs  macros.rs  mod.rs  search.rs  sessions.rs  snippets.rs  stats.rs  terminal.rs  utilities.rs
src/components/: AIPanel.css  AIPanel.tsx  AboutModal.css  AboutModal.tsx  CloudStoragePanel.css  CloudStoragePanel.tsx  CodeScreenshot.css  CodeScreenshot.tsx  ContextMenu.css  ContextMenu.tsx  Editor.css  Editor.tsx  EncryptionPanel.css  EncryptionPanel.tsx  ErrorBoundary.tsx  GitPanel.css  GitPanel.tsx  GlobalSearchPanel.css  GlobalSearchPanel.tsx  MarkdownPreview.css  MarkdownPreview.tsx  PomodoroTimer.css  PomodoroTimer.tsx  SearchPanel.css  SearchPanel.tsx  SessionsPanel.css  SessionsPanel.tsx  SettingsModal.css  SettingsModal.tsx  ShortcutsModal.css  ShortcutsModal.tsx  Sidebar.css  Sidebar.tsx  SnippetsPanel.css  SnippetsPanel.tsx  StatsPanel.css  StatsPanel.tsx  StatusBar.css  StatusBar.tsx  SupportPanel.css  (+7 more)
src/hooks/: useFileManager.ts  useKeyboardShortcuts.ts  useMenuEvents.ts  useSettings.ts
src/styles/: App.css  global.css
src/styles/themes/: accents.css  dark-glass.css  glassmorphism.css  light.css  (+1 more)
