[package]
name = "notepad-mac"
version = "2.0.0"
description = "A modern code editor for macOS with AI, Terminal & Git"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "path-all", "shell-open", "shell-execute", "window-all", "clipboard-all", "notification-all", "http-request"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
base64 = "0.21"
md5 = "0.7"
sha2 = "0.10"
uuid = { version = "1.6", features = ["v4"] }
regex = "1.10"
dirs = "5.0"
urlencoding = "2.1"
# Encryption
aes-gcm = "0.10"
rand = "0.8"
argon2 = "0.5"
# Fast search
walkdir = "2.4"
ignore = "0.4"
rayon = "1.8"
# Cloud storage
reqwest = { version = "0.11", features = ["json"] }
open = "5.0"
tokio = { version = "1", features = ["full"] }
# PTY Terminal
portable-pty = "0.8"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
